# simulation-inode-filesystem

./: .gitignore  CMakeLists.txt  Makefile  README.md  fload  main.cpp  mkdirs_corrupt.txt  run.sh
include/: cmd_utils.h  errors.h  fS_api.h  fs_api.h  fs_cache.h  fs_prompt.h  inode.h  iteration_carry.h  logger.h
src/: _logger.c  _logger.h  cmd_utils.c  commands.c  error.c  error.h  errors.c  format.c  fs_operations.c  fs_operations.h  logger.c  main.c  main.h  simulator.c  simulator.h  utils.c  utils.h
src/commands/: cat.c  cd.c  commands.h  corrupt.c  cp.c  debug.c  df.c  du.c  format.c  format.h  fsck.c  incp.c  info.c  load.c  ls.c  mkdir.c  mv.c  outcp.c  pwd.c  rm.c  rmdir.c
src/fsop/: fs_bitmap.c  fs_bitmap.h  fs_block_op.c  fs_block_op.h  fs_common.c  fs_common.h  fs_inode_op.c  fs_inode_op.h  fs_inode_utils.c  fs_io.c  fs_io.h  fs_links_op.c
src/inc/: _fs_varname.h  _logger.h  commands.h  error.h  format.h  fs_cache.h  fs_operations.h  fs_path.h  fs_prompt.h  fspath_info.h  inode.h  logger_api.h  main.h  return_codes.h  simulator.h
